Light point gizmo translate mode: Light jumps -431602080 units if translation mode is entered before normal found #75794

Closed
opened 2020-04-16 18:51:48 +02:00 by Vincent Blankfield · 4 comments

System Information
Operating system: Windows-10-10.0.14393-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.90 (sub 0), branch: master (modified), commit date: 2020-04-16 10:06, hash: 70a6c737ec
Worked: Unknown / None

Short description of error

If the light point gizmo translate mode is entered without a face under the light manipulator and then the manipulator is dragged over a face, the light teleports to a far away place.

Exact steps for others to reproduce the error

  • In the default scene add a directional light, move it to be able to access the gizmo, but make sure the gizmo is over the empty space.
  • Press and hold Ctrl while the gizmo is over the empty space, then drag the gizmo over a cube's face.

Result: Light gets teleported about 432000km away in the normal direction.

If Ctrl is pressed, or gizmo drag is started when there is a face under the gizmo, the operator behaves normally – the light gets oriented along the face normal and can be dragged around. (Dragging it away and towards the object is a bit funny though, but it's another topic.) So for the operator's translate mode to function in a meaningful way, Ctrl needs to be pressed after the normal is found, otherwise if it was pressed before, the light gets teleported once the normal is found.

Hack that appears to solve the issue

diff --git a/source/blender/editors/object/object_transform.c b/source/blender/editors/object/object_transform.c
index eef8e29640c..0d2ffd62b2c 100644
--- a/source/blender/editors/object/object_transform.c
+++ b/source/blender/editors/object/object_transform.c
@@ -1947,7 +1947,7 @@ static int object_transform_axis_target_modal(bContext *C, wmOperator *op, const

               struct XFormAxisItem *item = xfd->object_data;
               for (int i = 0; i < xfd->object_data_len; i++, item++) {
-                if (is_translate_init) {
+                if (is_translate_init || !xfd->prev.is_normal_valid) {
                   float ob_axis[3];
                   item->xform_dist = len_v3v3(item->ob->obmat[3], location_world);
                   normalize_v3_v3(ob_axis, item->ob->obmat[2]);
**System Information** Operating system: Windows-10-10.0.14393-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.90 (sub 0), branch: master (modified), commit date: 2020-04-16 10:06, hash: `70a6c737ec` Worked: Unknown / None **Short description of error** If the light point gizmo translate mode is entered without a face under the light manipulator and then the manipulator is dragged over a face, the light teleports to a far away place. **Exact steps for others to reproduce the error** - In the default scene add a directional light, move it to be able to access the gizmo, but make sure the gizmo is over the empty space. - Press and hold Ctrl while the gizmo is over the empty space, then drag the gizmo over a cube's face. **Result:** Light gets teleported about 432000km away in the normal direction. If `Ctrl` is pressed, or gizmo drag is started when there is a face under the gizmo, the operator behaves normally – the light gets oriented along the face normal and can be dragged around. (Dragging it away and towards the object is a bit funny though, but it's another topic.) So for the operator's translate mode to function in a meaningful way, `Ctrl` needs to be pressed *after* the normal is found, otherwise if it was pressed before, the light gets teleported once the normal is found. **Hack that appears to solve the issue** ``` diff --git a/source/blender/editors/object/object_transform.c b/source/blender/editors/object/object_transform.c index eef8e29640c..0d2ffd62b2c 100644 --- a/source/blender/editors/object/object_transform.c +++ b/source/blender/editors/object/object_transform.c @@ -1947,7 +1947,7 @@ static int object_transform_axis_target_modal(bContext *C, wmOperator *op, const struct XFormAxisItem *item = xfd->object_data; for (int i = 0; i < xfd->object_data_len; i++, item++) { - if (is_translate_init) { + if (is_translate_init || !xfd->prev.is_normal_valid) { float ob_axis[3]; item->xform_dist = len_v3v3(item->ob->obmat[3], location_world); normalize_v3_v3(ob_axis, item->ob->obmat[2]); ```

Added subscriber: @VincentBlankfield

Added subscriber: @VincentBlankfield

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by b6279b7415

This issue was referenced by b6279b74156e1f6d17dc0fa324aee347b26c9bd0

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-17 10:52:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75794
No description provided.